--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 body {
     margin: 0;
     flex-grow: 1;
-    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,6 +33,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    font-family: "Nunito";
 }
 .switch {
     display: flex;
@@ -52,10 +52,82 @@ body {
     margin-bottom: 15px;
 }
 .info {
+    display: flex;
+    flex-direction: column;
     border: 5px solid black;
+    padding: 20px;
     flex-grow: 1;
     margin-right: 15px;
+    width: 65%;
     box-sizing: border-box;
+}
+.info-gora{
+    display: flex;
+    align-items: flex-start;
+}
+.info1 {
+    flex-grow: 1;
+    padding: 40px;
+    font-family: "Nunito";
+}
+.info1 h1{
+    font-family: "Lilita One";
+}
+.info1 .ikony{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+}
+.info1 .ikony p{
+    display: flex;
+    align-items: center;
+    margin: 5px;
+}
+.info-dol{
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    gap: 100px;
+}
+.experience,
+.kontakt {
+    border: 5px solid black;
+    box-sizing: border-box;
+    padding: 15px;
+}
+.experience{
+    flex-grow: 1;
+    margin-top: 50px;
+    margin-left: 40px;
+    width: 30%;
+    height: 80%;
+    background-color: white;
+    border-color: #1E1E1E;
+}
+.experience ul{
+    list-style: none;
+    font-family: "Nunito";
+    font-size: 25px;
+}
+.experience h3{
+    text-align: center;
+    font-family: "Nunito";
+    font-size: 35px;
+}
+.kontakt{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    margin-top: 50px;
+    margin-right: 40px;
+    width: 30%;
+    height: 80%;
+}
+.kontakt-gora{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: "Nunito";
 }
 .prawastrona {
     width: 30%;
@@ -130,4 +202,17 @@ body {
 .powered img{
     width: 100px;
     height: 100px;
+}
+.ikony img{
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+}
+.kontakt-gora img{
+    width: 50px;
+    height: 50px;
+}
+.divavatar img{
+    background-color: #1E1E1E;
+    margin: 40px;
 }
